More player action migration

--- a/templates/import_scores.html
+++ b/templates/import_scores.html
@@ -25,5 +25,9 @@
       <br />
       <a href="/player_editor">Edit Players</a>
     </div>
+    {% for ht in html %}
+      {{ht}}
+      <br />
+    {% endfor %}
   </body>
 </html>
