--- a/templates/war_editor.html
+++ b/templates/war_editor.html
@@ -146,14 +146,14 @@
             </td>
           </tr>
         </table>
-        <table class="table table-sm w-auto">
+        <table class="table table-sm w-auto" id="editor_table">
           <thead>
             <tr class="text-center">
-              <th>Player</th>
-              <th>Score</th>
-              <th>Excused</th>
-              <th>Attempts Remaining</th>
-              <th>No Attempts</th>
+              <th class="sticky-top sorted-up" id="player_sort">Player</th>
+              <th class="sticky-top sorted-none" id="score_sort">Score</th>
+              <th class="sticky-top">Excused</th>
+              <th class="sticky-top">Attempts Remaining</th>
+              <th class="sticky-top">No Attempts</th>
             </tr>
           </thead>
 
