Sector 7 score imports

--- a/templates/base.html
+++ b/templates/base.html
@@ -53,9 +53,9 @@
           <li class="nav-item {% block nav_war_editor %}{% endblock %}">
             <a class="nav-link" href="{{url_for('war_editor')}}">New War</a>
           </li>
-          <li class="nav-item {% block nav_upload %}{% endblock %}">
-            <a class="nav-link" href="{{url_for('upload')}}">AI Scores</a>
-          </li>
+          <!-- <li class="nav&#45;item {% block nav_upload %}{% endblock %}"> -->
+          <!--   <a class="nav&#45;link" href="{{url_for('upload')}}">AI Scores</a> -->
+          <!-- </li> -->
           {% endif %}
           {% endif %}
         </ul>
