Added Issues page.  Added alliance column to war history.

--- a/templates/base.html
+++ b/templates/base.html
@@ -215,7 +215,7 @@
                 Other Help
               </dt>
               <dt class="col-sm-9">
-                Contact olevelo for general site help, issues or suggestions.  Contact Sentinel for score questions/corrections.
+                Click <a href="{{url_for('issues')}}">here</a> to submit a bug report or make a feature request, and see the status of past requests.  Contact olevelo for general site help, issues or suggestions.  Contact Sentinel for score questions/corrections.
               </dt>
             </dl>
           </div>
