--- a/templates/history.html
+++ b/templates/history.html
@@ -48,6 +48,9 @@
         <table id="history_table" class="table table-sm table-bordered">
           <tr>
             <th class="history_sort sticky-top sorted-down min-width" id="date_sort">Date</th>
+            {% if t.alliance == 9999 %}
+            <th class="player_sort sticky-top sorted-none" id="alliance_sort">Alliance</th>
+            {% endif %}
             <th class="history_sort sticky-top sorted-none" id="opponent_sort">Opponent</th>
             <th class="history_sort sticky-top sorted-none" id="league_sort">League</th>
             <th class="history_sort sticky-top sorted-none" id="our_points_sort">Our Points</th>
@@ -64,6 +67,11 @@
               {% endif %}
               <input type="hidden" id="{{war.id}}" value="{{war.tracked}}">
             </td>
+            {% if t.alliance == 9999 %}
+            <td class="left {{war.winClass()}} {{war.trackedClass()}}">
+              <a href="{{url_for('player_view', player_id=t.player.id, alliance_id=war.alliance.id)}}">{{war.alliance.name}}</a>
+            </td>
+            {% endif %}
             <td class="left {{war.winClass()}} {{war.trackedClass()}}">
               <a href="{{url_for('history', alliance_id=t.alliance, opponent_id=war.opponent_id)}}">{{war.opponent.name}}</a>
             </td>
