--- a/templates/war_editor.html
+++ b/templates/war_editor.html
@@ -47,6 +47,8 @@
                 {% if war.league == 7 %} selected {% endif %}>Cybertron</option>
                 <option value="6"
                 {% if war.league == 6 %} selected {% endif %}>Caminus</option>
+                <option value="5"
+                {% if war.league == 5 %} selected {% endif %}>Platinum</option>
               </select>
             </td>
           </tr>
