--- a/templates/war_editor.html
+++ b/templates/war_editor.html
@@ -193,7 +193,7 @@
           {% endfor %}
 
           {% if missing_players %}
-          <tr>
+          <tr id="missingPlayersButtonRow">
             <td>
               <button class="btn btn-primary" type="button" data-toggle="collapse" data-target=".missingPlayers" aria-expanded="false" aria-controls="missingPlayers">Add Missing Players</button>
             </td>
