--- a/templates/war_editor.html
+++ b/templates/war_editor.html
@@ -17,7 +17,7 @@
           <tr>
             <th>Alliance</th>
             <td>
-              <select class="custom-select" name="alliance_id">
+              <select class="custom-select" name="alliance_id" id="alliance_id">
                 <option></option>
                 {% for alliance in t.alliances %}
                     {% if alliance.active %}
