--- a/templates/war_editor.html
+++ b/templates/war_editor.html
@@ -45,7 +45,9 @@
           <tr>
             <th>New Opponent</th>
             <td>
-              <input class="form-control" type="text" name="opponent_new" autocomplete="off">
+              <div id="opponentsAuto" class="autocomplete" data-autocomplete='{{t.alliancesList|tojson}}'>
+                <input class="form-control" type="text" name="opponent_new" value="{{war.opponent.name}}" autocomplete="off">
+              </div>
             </td>
           </tr>
           <tr>
