Added ore calculator

--- a/static/style.css
+++ b/static/style.css
@@ -54,6 +54,11 @@ body {
   background: white;
 }
 
+#ore_input_table {
+  text-align: center;
+  background: white;
+}
+
 #issues_table {
   text-align: left;
 }
