--- a/templates/base.html
+++ b/templates/base.html
@@ -46,6 +46,9 @@
           <li class="nav-item {% block nav_player %}{% endblock %}">
             <a class="nav-link" href="{{url_for('player_view')}}">Player Detail</a>
           </li>
+          <li class="nav-item {% block nav_ore %}{% endblock %}">
+            <a class="nav-link" href="{{url_for('ore_calculator')}}">Ore Calculator</a>
+          </li>
           {% if current_user.officer %}
           <li class="nav-item {% block nav_player_editor %}{% endblock %}">
             <a class="nav-link" href="{{url_for('player_editor')}}">Edit Players</a>
