--- a/templates/war_editor.html
+++ b/templates/war_editor.html
@@ -46,7 +46,7 @@
             <th>New Opponent</th>
             <td>
               <div id="opponentsAuto" class="autocomplete" data-autocomplete='{{t.alliancesList|tojson}}'>
-                <input class="form-control" type="text" name="opponent_new" value="{{war.opponent.name}}" autocomplete="off">
+                <input class="form-control" type="text" name="opponent_new" value="" autocomplete="off">
               </div>
             </td>
           </tr>
