--- a/templates/base.html
+++ b/templates/base.html
@@ -50,11 +50,17 @@
             <a class="nav-link" href="{{url_for('ore_calculator')}}">Ore Calculator</a>
           </li>
           {% if current_user.officer %}
-          <li class="nav-item {% block nav_player_editor %}{% endblock %}">
-            <a class="nav-link" href="{{url_for('player_editor')}}">Edit Players</a>
-          </li>
           <li class="nav-item {% block nav_war_editor %}{% endblock %}">
             <a class="nav-link" href="{{url_for('war_editor')}}">New War</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle {% block nav_tools %}{% endblock %}" href="#" id="navTools" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Tools</a>
+            <div class="dropdown-menu" aria-labelledby="navTools">
+                <a class="dropdown-item {% block nav_player_editor %}{% endblock %}" href="{{url_for('player_editor')}}">Edit Players</a>
+                <a class="dropdown-item {% block nav_alliance_editor %}{% endblock %}" href="{{url_for('player_editor')}}">Edit Alliances</a>
+                <a class="dropdown-item {% block nav_prime_editor %}{% endblock %}" href="{{url_for('prime_editor')}}">Edit Prime Dates</a>
+
+            </div>
           </li>
           <!-- <li class="nav&#45;item {% block nav_upload %}{% endblock %}"> -->
           <!--   <a class="nav&#45;link" href="{{url_for('upload')}}">AI Scores</a> -->
