--- a/templates/player_editor.html
+++ b/templates/player_editor.html
@@ -6,6 +6,7 @@
 
 {% block title %}Player Editor{% endblock %}
 {% block header %}TFEW Player Editor{% endblock %}
+{% block nav_tools %}active{% endblock %}
 {% block nav_player_editor %}active{% endblock %}
 
 {% block update_form %}{% endblock %}
