Added Alliance Editor and Move Alliance

--- a/templates/base.html
+++ b/templates/base.html
@@ -57,7 +57,7 @@
             <a class="nav-link dropdown-toggle {% block nav_tools %}{% endblock %}" href="#" id="navTools" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Tools</a>
             <div class="dropdown-menu" aria-labelledby="navTools">
                 <a class="dropdown-item {% block nav_player_editor %}{% endblock %}" href="{{url_for('player_editor')}}">Edit Players</a>
-                <a class="dropdown-item {% block nav_alliance_editor %}{% endblock %}" href="{{url_for('player_editor')}}">Edit Alliances</a>
+                <a class="dropdown-item {% block nav_alliance_editor %}{% endblock %}" href="{{url_for('alliance_editor')}}">Edit Alliances</a>
                 <a class="dropdown-item {% block nav_prime_editor %}{% endblock %}" href="{{url_for('prime_editor')}}">Edit Prime Dates</a>
 
             </div>
