--- a/templates/player_editor.html
+++ b/templates/player_editor.html
@@ -32,7 +32,7 @@
       </form>
 
       <form method="POST">
-        <table class="table table-sm table-striped">
+        <table class="table table-sm table-striped w-auto">
           <thead>
             <tr>
               <th></th>
