Added confirmation for most editor submissions.  Added Gold and Silver leagues.  Fixed export.

--- a/static/style.css
+++ b/static/style.css
@@ -385,6 +385,10 @@ a.dropdown-item.active, a.dropdown-item:active {
   display: block;
 }
 
+.modal-wide {
+  max-width: 800px;
+}
+
 @media (max-width: 610px) {
   .nav-link, .dropdown-item {
     font-size: 0.7rem;
