--- a/templates/player_editor.html
+++ b/templates/player_editor.html
@@ -39,7 +39,7 @@
               <th>Reset</th>
               <th>Name</th>
               <th>Officer</th>
-              <th>Last Action</th>
+              <th>Allliance</th>
               <th>OCR Strings</th>
               <th colspan="100"></th>
             </tr>
