--- a/templates/war_editor.html
+++ b/templates/war_editor.html
@@ -62,6 +62,10 @@
                 {% if war.league == 6 %} selected {% endif %}>Caminus</option>
                 <option value="5"
                 {% if war.league == 5 %} selected {% endif %}>Platinum</option>
+                <option value="4"
+                {% if war.league == 4 %} selected {% endif %}>Gold</option>
+                <option value="3"
+                {% if war.league == 3 %} selected {% endif %}>Silver</option>
               </select>
             </td>
           </tr>
