--- a/templates/base.html
+++ b/templates/base.html
@@ -165,6 +165,25 @@
       {% endblock %}
       {% block content %}{% endblock %}
     </div>
+
+    <div class="modal fade" id="updates" tabindex="-1" role="dialog" aria-labelledby="updates" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered modal-wide" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="updatesTitle">Confirm updates</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <table id="confirmUpdates" class="table table-sm table-striped"></table>
+            <input class="btn btn-primary" type="button" id="confirm" value="Confirm Changes">
+            <a href="" class="btn btn-danger">Reset Changes</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div class="modal fade" id="help" tabindex="-1" role="dialog" aria-labelledby="help" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
