--- a/templates/scoreboard.html
+++ b/templates/scoreboard.html
@@ -13,7 +13,7 @@
     <div class="col scoreboard">
       <table id="summary_table" class="table table-sm table-bordered">
         <tr>
-          <th class="header-right" colspan="7">Date</th>
+          <th class="header-right" colspan="8">Date</th>
           {% for war in t.wars %}
           <td class="sticky-top-1 min-width {{war.winClass()}} {{war.trackedClass()}} cls{{war.id}}">
             {% if current_user.officer %}
@@ -25,7 +25,7 @@
           {% endfor %}
         </tr>
         <tr>
-          <th class="header-right" colspan="7">Opponent</th>
+          <th class="header-right" colspan="8">Opponent</th>
           {% for war in t.wars %}
           <td class="sticky-top-2 {{war.winClass()}} {{war.trackedClass()}} cls{{war.id}}">
             <a href="{{url_for('scoreboard', alliance_id=t.alliance, opponent_id=war.opponent_id)}}">{{war.opponent.name}}</a>
@@ -33,7 +33,7 @@
           {% endfor %}
         </tr>
         <tr>
-          <th class="header-right" colspan="7">League</th>
+          <th class="header-right" colspan="8">League</th>
           {% for war in t.wars %}
           <td class="{{war.winClass()}} {{war.trackedClass()}} cls{{war.id}}">
             {{war.leagueText()}}
@@ -41,7 +41,7 @@
           {% endfor %}
         </tr>
         <tr>
-          <th class="header-right" colspan="7">Tracked</th>
+          <th class="header-right" colspan="8">Tracked</th>
           {% for war in t.wars %}
           <td class="{{war.winClass()}} {{war.trackedClass()}} cls{{war.id}}">
             {{war.trackedText()}}
@@ -50,7 +50,7 @@
           {% endfor %}
         </tr>
         <tr>
-          <th class="header-right" colspan="7">Our Points</th>
+          <th class="header-right" colspan="8">Our Points</th>
           {% for war in t.wars %}
           <td class="{{war.winClass()}} {{war.trackedClass()}} cls{{war.id}}">
             {{war.our_score}}
@@ -58,7 +58,7 @@
           {% endfor %}
         </tr>
         <tr>
-          <th class="header-right" colspan="7">Opponent Points</th>
+          <th class="header-right" colspan="8">Opponent Points</th>
           {% for war in t.wars %}
           <td class="{{war.winClass()}} {{war.trackedClass()}} cls{{war.id}}">
             {{war.opp_score}}
@@ -66,7 +66,7 @@
           {% endfor %}
         </tr>
         <tr>
-          <th class="header-right" colspan="7">Base 1</th>
+          <th class="header-right" colspan="8">Base 1</th>
           {% for war in t.wars %}
           <td class="{{war.winClass()}} {{war.trackedClass()}} cls{{war.id}}">
             {{war.b1p.name}}
@@ -74,7 +74,7 @@
           {% endfor %}
         </tr>
         <tr>
-          <th class="header-right" colspan="7">Base 2</th>
+          <th class="header-right" colspan="8">Base 2</th>
           {% for war in t.wars %}
           <td class="{{war.winClass()}} {{war.trackedClass()}} cls{{war.id}}">
             {{war.b2p.name}}
@@ -82,7 +82,7 @@
           {% endfor %}
         </tr>
         <tr>
-          <th class="header-right" colspan="7">Base 3</th>
+          <th class="header-right" colspan="8">Base 3</th>
           {% for war in t.wars %}
           <td class="{{war.winClass()}} {{war.trackedClass()}} cls{{war.id}}">
             {{war.b3p.name}}
@@ -90,7 +90,7 @@
           {% endfor %}
         </tr>
         <tr>
-          <th class="header-right" colspan="7">Base 4</th>
+          <th class="header-right" colspan="8">Base 4</th>
           {% for war in t.wars %}
           <td class="{{war.winClass()}} {{war.trackedClass()}} cls{{war.id}}">
             {{war.b4p.name}}
@@ -98,7 +98,7 @@
           {% endfor %}
         </tr>
         <tr>
-          <th class="header-right" colspan="7">Base 5</th>
+          <th class="header-right" colspan="8">Base 5</th>
           {% for war in t.wars %}
           <td class="{{war.winClass()}} {{war.trackedClass()}} cls{{war.id}}">
             {{war.b5p.name}}
@@ -122,6 +122,7 @@
           <th class="summary_sort sticky-top-1 sorted-none" id="prime_sort">Prime</th>
           <th class="summary_sort sticky-top-1 sorted-none" id="cyber_sort">Cybertron</th>
           <th class="summary_sort sticky-top-1 sorted-none" id="all_sort">All</th>
+          <th class="summary_sort sticky-top-1 sorted-none" id="strike_sort">Strikes</th>
         </tr>
         <tr>
           <td></td>
@@ -134,17 +135,31 @@
           <td class="light avgScore" id="avg_prime"></td>
           <td class="light avgScore" id="avg_cyber"></td>
           <td class="light avgScore" id="avg_all"></td>
+          <td class="light avgScore" id="avg_strike"></td>
         </tr>
 
         {% for player in t.players %}
-        <tr>
-          <td class="rank">{{loop.index}}</td>
-          <td class="header-left sticky-left">
+            {% set display = False %}
+            {% set italic = "" %}
+            {% set strikeClass = "" %}
             {% if current_user.id == player.id or current_user.officer %}
-                {% set italic = "" %}
+                {% set display = True %}
                 {% if player.officer %}
                     {% set italic = "optional" %}
                 {% endif %}
+
+                {% if player.strikes == 1 %}
+                    {% set strikeClass = 'strikeOne' %}
+                {% elif player.strikes == 2 %}
+                    {% set strikeClass = 'strikeTwo' %}
+                {% elif player.strikes >= 3 %}
+                    {% set strikeClass = 'strikeThree' %}
+                {% endif %}
+            {% endif %}
+        <tr>
+          <td class="rank">{{loop.index}}</td>
+          <td class="header-left sticky-left {{strikeClass}}">
+            {% if display %}
             <a class="{{italic}}" href="{{url_for('player_view', player_id=player.id)}}">{{player.name}}</a>
             {% else %}
             <div>&nbsp;</div>
@@ -156,17 +171,18 @@
           <td class="light">{{player.primeAvg}}</td>
           <td class="light">{{player.cyberAvg}}</td>
           <td class="light">{{player.allAvg}}</td>
+          <td class="light">{{player.strikes}}</td>
           {% for war in t.wars %}
           {% set score = player.scoresRange[war.id].score %}
-          {% set noAttempt = player.scoresRange[war.id].no_attempts %}
-          {% set attemptsLeft = player.scoresRange[war.id].attempts_left %}
+          {% set brokeProtocol = player.scoresRange[war.id].broke_protocol %}
+          {% set minorInfraction = player.scoresRange[war.id].minor_infraction %}
           {% set excused = player.scoresRange[war.id].excused %}
           {% set notInAlliance = False %}
           {% if score is not defined %}
               {% set notInAlliance = True %}
           {% endif %}
-          {% if current_user.id == player.id or current_user.officer %}
-          <td class="{{war.trackedClass()}} {{'noAttempt' if noAttempt}} {{'attemptsLeft' if attemptsLeft}} {{'excused' if excused}} {{'notInAlliance' if notInAlliance}} cls{{war.id}}">
+          {% if display %}
+          <td class="{{war.trackedClass()}} {{'brokeProtocol' if brokeProtocol}} {{'minorInfraction' if minorInfraction}} {{'excused' if excused}} {{'notInAlliance' if notInAlliance}} cls{{war.id}}">
             {{score if score != None}}
           </td>
           {% else %}
