--- a/templates/ore_calculator.html
+++ b/templates/ore_calculator.html
@@ -6,6 +6,7 @@
 
 {% block title %}Ore Calculator{% endblock %}
 {% block header %}TFEW Ore Calculator{% endblock %}
+{% block nav_utilities %}active{% endblock %}
 {% block nav_ore %}active{% endblock %}
 
 {% block update_form %}{% endblock %}
