--- a/templates/base.html
+++ b/templates/base.html
@@ -46,8 +46,12 @@
           <li class="nav-item {% block nav_player %}{% endblock %}">
             <a class="nav-link" href="{{url_for('player_view')}}">Player Detail</a>
           </li>
-          <li class="nav-item {% block nav_ore %}{% endblock %}">
-            <a class="nav-link" href="{{url_for('ore_calculator')}}">Ore Calculator</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle {% block nav_utilities %}{% endblock %}" href="#" id="navUtilities" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Utilities</a>
+            <div class="dropdown-menu" aria-labelledby="navUtilities">
+                <a class="dropdown-item {% block nav_ore %}{% endblock %}" href="{{url_for('ore_calculator')}}">Ore Calculator</a>
+                <a class="dropdown-item {% block nav_war_calculator %}{% endblock %}" href="{{url_for('war_calculator')}}">War Calculator</a>
+            </div>
           </li>
           {% if current_user.officer %}
           <li class="nav-item {% block nav_war_editor %}{% endblock %}">
@@ -59,7 +63,6 @@
                 <a class="dropdown-item {% block nav_player_editor %}{% endblock %}" href="{{url_for('player_editor')}}">Edit Players</a>
                 <a class="dropdown-item {% block nav_alliance_editor %}{% endblock %}" href="{{url_for('alliance_editor')}}">Edit Alliances</a>
                 <a class="dropdown-item {% block nav_prime_editor %}{% endblock %}" href="{{url_for('prime_editor')}}">Edit Prime Dates</a>
-
             </div>
           </li>
           <!-- <li class="nav&#45;item {% block nav_upload %}{% endblock %}"> -->
